css/styles.css
body{
    margin : 0px;
    overflow:auto;
}
h1{
    text-align : center;
    background-image : linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
    margin : 0px;
    padding : 3vh;
}
#tableDiv{
    display:inline-block;
    float:left;
    height: 89vh;
    overflow: auto;
    width: 20vw;
    background: #E8E8E8;
}
#tableDiv table{
    font-size: 110%;
    border-spacing: 3px;
    width:100%;
    height:100%;
}
#tableDiv table tr th{
    position: sticky;
    top: 0;
    text-align : left;
    background-color: #808000;
    padding: 20px 0px 20px 27px;
    color: #FFFFFF;
    font-family : Arial;
    font-size:120%;
}
#tableDiv table tr td{
    font-family : Arial;
    font-size : 95%;
    white-space: nowrap;
    background-color: yellowgreen;
    padding: 10px;
}
#tableDiv table tr td:hover{
    background-color:#90EE90;
}
#spanIf{
    font-family : Arial;
    padding:25px;
    font-size:120%;
    color:red;
}
h3{
    font-family:Arial;
    background-image: linear-gradient(to right, skyblue, white);
    margin:3px;
    padding:2vh;
}
#tabsDiv{
    float:left;
    height: 89vh;
    width:80vw;
    background:#E8E8F7;
    display:inline-block;
}
.tab{
    background:white;
    font-size:150%;
    padding:3px 20px 3px 20px;
    margin-left:3px;
    border-radius:10px;
}
.tab:hover{
    background:lightgrey;
}
.activetab {
   color: black;
   border-bottom: 3px solid #2d2d2d;
   background-color:lightgrey;
}
#searchTab{
    background:white;
    text-align:center;
    border-radius:10px;
    height:72vh;
    padding:10px;
    margin:3px;
}
#searchTab input{
    width:200px;
    height:25px;
    padding:3px;
}
#searchTab button{
    width:100px;
    height:31px;
}
#searchTab span{
    color:red;
}
#searchResult{
    height:50vh;
    border: 2px solid;
    border-radius:10px;
    padding: 10px;
    text-align:left;
    overflow:auto;
}
#showId{
    border:1px solid;
    background-color:lightgrey;
    float:left;
    height:94.5%;
    width:20%;
    padding:10px;
    overflow:auto;
    margin-right:10px;
}
#showId table{
    background: red;
    width:100%;
}
#showId table tr td{
    background:white;
    width:20px;
    font-family : Arial;
    font-size : 95%;
    white-space: nowrap;
    padding: 10px;
}
#showId table tr td:hover{
    background-color:lightyellow;
}
#showSource{
    border:1px solid;
    background-color:#E8E8F7;
    float:left;
    padding:10px;
    height:94.5%;
    width:75%;
    overflow:auto;
}
.autoComBox{
    display:inline-block;
}

